# qttester

./: .gitignore  CMakeLists.txt  Pipfile  README.md  applicationundertest.cpp  applicationundertest.h  conan-build-setup.bat  conanfile.py  main.cpp  mainwindow.cpp  mainwindow.ui  qttester.py  simple_test.py
tests/: simple_test.py
